--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - ninja-build
-            - g++-5
-      env: MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
+            - g++-7
+      env: MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
     - compiler: clang
       addons:
         apt:
@@ -23,7 +23,7 @@ matrix:
             - llvm-toolchain-trusty-3.9
           packages:
             - ninja-build
-            - g++-5 # somehow we need this one here.
+            - g++-5 # we need this one for the libstdc++.
             - clang-3.9
       env: MATRIX_EVAL="CC=clang-3.9 && CXX=clang++-3.9"
     - compiler: clang
@@ -34,6 +34,7 @@ matrix:
             - llvm-toolchain-trusty-5.0
           packages:
             - ninja-build
+            - g++-7 # we need this one for the libstdc++.
             - clang-5.0
       env: MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
 
