Better design, split low level server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ if (UNIX)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall -Wextra")
   set(CMAKE_CXX_LINK_FLAGS "${CMAKE_CXX_LINK_FLAGS} -latomic")
 
-  set(CXX_FLAGS_DEBUG "-g -D_DEBUG -O0")
+  set(CXX_FLAGS_DEBUG "-g -D_DEBUG -O0 -DBOOST_ASIO_ENABLE_BUFFER_DEBUGGING")
   set(CXX_FLAGS_RELEASE  "-DNDEBUG -O3")
 
 endif (UNIX)
